--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,25 +1,38 @@
 {
-  "pages": [
-    "pages/index/index",
-    "pages/getOpenId/index",
-    "pages/getMiniProgramCode/index",
-    "pages/deployService/index",
-    "pages/createCollection/index",
-    "pages/uploadFile/index",
-    "pages/selectRecord/index",
-    "pages/updateRecord/index",
-    "pages/updateRecordResult/index",
-    "pages/updateRecordSuccess/index",
-    "pages/sumRecord/index",
-    "pages/sumRecordResult/index"
-  ],
-  "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
-    "navigationBarTextStyle": "black"
-  },
-  "sitemapLocation": "sitemap.json",
-  "style": "v2"
+    "pages": [
+        "pages/playlist/playlist",
+        "pages/blog/blog",
+        "pages/demo/demo",
+        "pages/prolist/prolist"
+    ],
+    "window": {
+        "backgroundColor": "#F6F6F6",
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#d43c33",
+        "navigationBarTitleText": "音乐",
+        "navigationBarTextStyle": "white"
+    },
+    "tabBar":{
+       "color":"#474747",
+       "selectedColor":"#d43c43",
+       "list":[{
+          "pagePath":"pages/playlist/playlist",
+          "text":"音乐",
+          "iconPath":"images/music.png",
+          "selectedIconPath": "images/music-actived.png"
+        },{
+            "pagePath":"pages/playlist/playlist",
+            "text":"发现",
+            "iconPath":"images/blog.png",
+            "selectedIconPath": "images/blog-actived.png"
+          },
+          {
+            "pagePath":"pages/playlist/playlist",
+            "text":"我的",
+            "iconPath":"images/profile.png",
+            "selectedIconPath": "images/profile-actived.png"
+          }]
+    },
+    "sitemapLocation": "sitemap.json",
+    "style": "v2"
 }
